--- a/restaurant_desktop-app/restaurant_desktop-app_master/restaurant_desktop-app/Properties/Resources.resx
+++ b/restaurant_desktop-app/restaurant_desktop-app_master/restaurant_desktop-app/Properties/Resources.resx
@@ -133,4 +133,7 @@
   <data name="information32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\information32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="settings24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\settings24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
